kubernetes/apps/namo-apps/shlink-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shlink-ui
  namespace: namo-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shlink-ui
  template:
    metadata:
      labels:
        app: shlink-ui
    spec:
      containers:
        - name: shlink-web-client
          image: shlinkio/shlink-web-client:4.8.1
          ports:
            - containerPort: 8080
          resources:
            requests: { memory: 32Mi, cpu: 10m }
            limits:   { memory: 128Mi, cpu: 200m }
