kubernetes/apps/namo-apps/shlink-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shlink-ui
  namespace: namo-apps
spec:
  selector:
    app: shlink-ui
  ports:
    - port: 80
      targetPort: 8080
